--- a/CGFexample.vcxproj
+++ b/CGFexample.vcxproj
@@ -71,6 +71,7 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\DataHolders.h" />
     <ClInclude Include="src\DemoScene.h" />
     <ClInclude Include="src\ExampleObject.h" />
   </ItemGroup>
