--- a/CGFexample.vcxproj.filters
+++ b/CGFexample.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="src\ExampleObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\DataHolders.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
