--- a/CGFexample.vcxproj
+++ b/CGFexample.vcxproj
@@ -70,6 +70,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Appearance.cpp" />
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Cylinder.cpp" />
     <ClCompile Include="src\DemoScene.cpp" />
     <ClCompile Include="src\ExampleObject.cpp" />
@@ -88,6 +89,7 @@
   <ItemGroup>
     <ClInclude Include="include\XMLScene.h" />
     <ClInclude Include="src\Appearance.h" />
+    <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Cylinder.h" />
     <ClInclude Include="src\DemoScene.h" />
     <ClInclude Include="src\ExampleObject.h" />
