--- a/CGFexample.vcxproj
+++ b/CGFexample.vcxproj
@@ -77,6 +77,7 @@
     <ClCompile Include="src\GlobalData.cpp" />
     <ClCompile Include="src\Graph.cpp" />
     <ClCompile Include="src\GraphNode.cpp" />
+    <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Node.cpp" />
     <ClCompile Include="src\Rectangle.cpp" />
@@ -96,6 +97,7 @@
     <ClInclude Include="src\GlobalData.h" />
     <ClInclude Include="src\Graph.h" />
     <ClInclude Include="src\GraphNode.h" />
+    <ClInclude Include="src\Light.h" />
     <ClInclude Include="src\Node.h" />
     <ClInclude Include="src\Rectangle.h" />
     <ClInclude Include="src\Sphere.h" />
