--- a/CGFexample.vcxproj
+++ b/CGFexample.vcxproj
@@ -72,6 +72,7 @@
     <ClCompile Include="src\Appearance.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Cylinder.cpp" />
+    <ClCompile Include="src\DemoInterface.cpp" />
     <ClCompile Include="src\DemoScene.cpp" />
     <ClCompile Include="src\ExampleObject.cpp" />
     <ClCompile Include="src\GlobalData.cpp" />
@@ -90,6 +91,7 @@
     <ClInclude Include="src\Appearance.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Cylinder.h" />
+    <ClInclude Include="src\DemoInterface.h" />
     <ClInclude Include="src\DemoScene.h" />
     <ClInclude Include="src\ExampleObject.h" />
     <ClInclude Include="src\GlobalData.h" />
