--- a/CGFexample.vcxproj.filters
+++ b/CGFexample.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="src\NewGraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\DemoInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\DemoScene.h">
@@ -105,6 +108,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\NewGraph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DemoInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
