--- a/CGFexample.vcxproj
+++ b/CGFexample.vcxproj
@@ -71,18 +71,14 @@
   <ItemGroup>
     <ClCompile Include="src\Appearance.cpp" />
     <ClCompile Include="src\Camera.cpp" />
-    <ClCompile Include="src\Cylinder.cpp" />
     <ClCompile Include="src\DemoInterface.cpp" />
     <ClCompile Include="src\DemoScene.cpp" />
     <ClCompile Include="src\ExampleObject.cpp" />
     <ClCompile Include="src\GlobalData.cpp" />
     <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\NewGraph.cpp" />
-    <ClCompile Include="src\Rectangle.cpp" />
-    <ClCompile Include="src\Sphere.cpp" />
-    <ClCompile Include="src\Torus.cpp" />
-    <ClCompile Include="src\Triangle.cpp" />
+    <ClCompile Include="src\Graph.cpp" />
+    <ClCompile Include="src\Primitives.cpp" />
     <ClCompile Include="src\VisualObject.cpp" />
     <ClCompile Include="src\XMLScene.cpp" />
   </ItemGroup>
@@ -90,17 +86,13 @@
     <ClInclude Include="include\XMLScene.h" />
     <ClInclude Include="src\Appearance.h" />
     <ClInclude Include="src\Camera.h" />
-    <ClInclude Include="src\Cylinder.h" />
     <ClInclude Include="src\DemoInterface.h" />
     <ClInclude Include="src\DemoScene.h" />
     <ClInclude Include="src\ExampleObject.h" />
     <ClInclude Include="src\GlobalData.h" />
     <ClInclude Include="src\Light.h" />
-    <ClInclude Include="src\NewGraph.h" />
-    <ClInclude Include="src\Rectangle.h" />
-    <ClInclude Include="src\Sphere.h" />
-    <ClInclude Include="src\Torus.h" />
-    <ClInclude Include="src\Triangle.h" />
+    <ClInclude Include="src\Graph.h" />
+    <ClInclude Include="src\Primitives.h" />
     <ClInclude Include="src\Vertice.h" />
     <ClInclude Include="src\VisualObject.h" />
   </ItemGroup>
