--- a/CGFexample.vcxproj.filters
+++ b/CGFexample.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="src\LinearAnimation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="server\socket.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\DemoScene.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\LinearAnimation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="server\socket.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
